SERVER-64849: Return LogicalTime::kUninitialized instead of default-constructed value